[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/scenes/challenges_menu/ChallengeMenu3.gd" type="Script" id=1]
[ext_resource path="res://assets/challenges_menu/challenge3/bg.png" type="Texture" id=3]
[ext_resource path="res://assets/challenges_menu/score_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/challenges_menu/challenge3/hourglass.png" type="Texture" id=6]
[ext_resource path="res://assets/challenges_menu/challenge3/redbar.png" type="Texture" id=7]
[ext_resource path="res://assets/challenges_menu/challenge3/greenbar.png" type="Texture" id=8]
[ext_resource path="res://assets/challenges_menu/challenge3/border.png" type="Texture" id=9]
[ext_resource path="res://assets/challenges_menu/challenge3/bluebar.png" type="Texture" id=10]
[ext_resource path="res://assets/challenges_menu/challenge3/greybar.png" type="Texture" id=11]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed = 0.05;
void fragment(){
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE, shifteduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = 0.05

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="ChallengeMenu3" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
material = SubResource( 2 )
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 3 )
stretch_mode = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="TestButton" type="Button" parent="UI"]
visible = false
margin_left = 1174.0
margin_top = 20.0
margin_right = 1265.0
margin_bottom = 40.0
text = "MAIN MENU"

[node name="RedBar" type="TextureProgress" parent="UI"]
margin_left = 376.0
margin_top = 78.0
margin_right = 907.0
margin_bottom = 94.0
step = 0.01
texture_under = ExtResource( 11 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 7 )
texture_progress_offset = Vector2( 1, 0 )
nine_patch_stretch = true

[node name="BlueBar" type="TextureProgress" parent="UI"]
margin_left = 376.0
margin_top = 59.0
margin_right = 907.0
margin_bottom = 75.0
step = 0.01
texture_under = ExtResource( 11 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
texture_progress_offset = Vector2( 1, 0 )
nine_patch_stretch = true

[node name="GreenBar" type="TextureProgress" parent="UI"]
margin_left = 376.0
margin_top = 40.0
margin_right = 907.0
margin_bottom = 56.0
step = 0.01
texture_under = ExtResource( 11 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 8 )
texture_progress_offset = Vector2( 1, 0 )
nine_patch_stretch = true

[node name="ScoreLabel" type="Label" parent="UI"]
margin_left = 1160.0
margin_top = 32.0
margin_right = 1257.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "0"
valign = 1

[node name="ScoreIcon" type="Sprite" parent="UI"]
position = Vector2( 1125, 52 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 4 )

[node name="TimerLabel" type="Label" parent="UI"]
margin_left = 79.0
margin_top = 32.0
margin_right = 176.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 3 )
text = "0"
valign = 1

[node name="TimerIcon" type="Sprite" parent="UI"]
position = Vector2( 52, 51 )
scale = Vector2( 0.593752, 0.593752 )
texture = ExtResource( 6 )

[node name="StartingTilePosition" type="Position2D" parent="."]
position = Vector2( 374, 114 )

[node name="YSort" type="YSort" parent="."]

[node name="GameTimer" type="Timer" parent="."]

[node name="GreenTimer" type="Timer" parent="."]
one_shot = true

[node name="BlueTimer" type="Timer" parent="."]
one_shot = true

[node name="RedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="UI/TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="GreenTimer" to="." method="_on_GreenTimer_timeout"]
[connection signal="timeout" from="BlueTimer" to="." method="_on_BlueTimer_timeout"]
[connection signal="timeout" from="RedTimer" to="." method="_on_RedTimer_timeout"]
